2018-03-18 Philipp Klaus Krause <pkk AT spth.de>

	* support/sdbinutils:
	  Merge upstream GNU Binutils 2.30.
	* src/stm8/gen.c:
	  Improve cycle count accuracy for shifts.

2018-03-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve handling of rematerialized operands and I/O.

2018-03-18 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/valdiag/valdiag.py: Fix a very old bug, more fixes
	  for Python 2/3 compatibility

2018-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Implement RFE #566.

2018-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/valdiag/tests/restrict.c:
	  Test for bug #2714.
	* src/SDCCralloc.hpp:
	  Faster check for non-connected live-ranges.
	* src/stm8/ralloc.c,
	  src/stm8/gen.c,
	  src/stm8/peep.c:
	  Basic support for rematerialization of addresses for stm8.

2018-03-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/collate-results.py,
	  support/valdiag/valdiag.py: replace use of deprecated
	  functions for better Python 3 compatibility

2018-03-16 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/collate-results.py,
	  support/regression/compact-results.py,
	  support/valdiag/valdiag.py:
	  Convert Python 1 to Python 2/3.
	* support/regression/tests/qsort.c:
	  Disable test for mcs51-small due to lack of RAM.
	* sim/ucsim/cmd.src/cmdlex.cc:
	  Remove lex-generated file from repository.

2018-03-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-2716.c:
	  Fix bug #2716.
	* src/SDCCopt.c:
	  Disable fix for non-connected live-ranges for ds390.
	* device/include/stdlib.h,
	  device/lib/bsearch.c,
	  device/lib/incl.mk,
	  support/regression/tests/qsort.c:
	  Implement bsearch().
	* support/valdiag/valdiag.py,
	  support/valdiag/Makefile.in:
	  Include z180, r2k, gbz80, tlcs90, s08, stm8 in diagnostic validation.
	* support/regression/generate-cases.py,
	  support/regression/HTMLgen.py,